--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,11 @@
 
 :root {
   font-family: var(--font-sans);
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.5;
   font-weight: 400;
   padding: 0;
+  color: #003366;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -38,7 +39,6 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
   line-height: 1.1;
 }
 
